--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           </button>
         </div>
         <div class="clock" id="js-clock">
-          <span id="js-minutes"></span>
+          <span id="js-minutes">25</span>
           <span class="separator">:</span>
-          <span id="js-seconds"></span>
+          <span id="js-seconds">00</span>
         </div>
         <button class="main-button" data-action="start" id="js-btn">
           Start
